--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -18,7 +18,7 @@
   <p id="uploadStatus"></p>
 
   <script>
-    const API_BASE = 'etf-portal-production.up.railway.app'; // e.g. https://etf-api.up.railway.app
+    const API_BASE = 'https://etf-portal-production.up.railway.app'; // e.g. https://etf-api.up.railway.app
     let token = localStorage.getItem('token') || '';
 
     document.getElementById('login').onclick = async () => {
